--- a/FactoryGame/Packages/manifest.json
+++ b/FactoryGame/Packages/manifest.json
@@ -6,6 +6,9 @@
     "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
+    "com.unity.multiplayer.tools": "1.0.0",
+    "com.unity.netcode.gameobjects": "1.1.0",
     "com.unity.render-pipelines.universal": "12.1.8",
     "com.unity.terrain-tools": "4.0.3",
     "com.unity.test-framework": "1.1.33",
@@ -16,6 +19,7 @@
     "com.unity.ui": "2.0.0",
     "com.unity.ui.builder": "2.0.0",
     "com.unity.visualscripting": "1.7.8",
+    "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
